[package]
name = "tree-sitter-jack"
description = "Jack (nand2tetris) grammar for the tree-sitter parsing library"
version = "0.1.2"
keywords = ["incremental", "parsing", "jack", "nand2tetris"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jreyes33/tree-sitter-jack"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
